--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "prepare": "husky install",
         "lint": "eslint .",
         "lint-fix": "eslint . --fix",
-        "dev": "http-server -S"
+        "dev": "http-server -S --port 8086"
     },
     "husky": {
         "hooks": {
